demetra -> trunk